# rpi-hub

./: CLAUDE.md  Cargo.toml  README.md
setup/: install.sh  rpi-hub.service  uninstall.sh
src/: app.rs  bt.rs  input.rs  keymap.rs  main.rs  report.rs
